--- a/capacitor/build.gradle
+++ b/capacitor/build.gradle
@@ -11,13 +11,15 @@ ext {
     cordovaAndroidVersion = project.hasProperty('cordovaAndroidVersion') ? rootProject.ext.cordovaAndroidVersion : '10.1.1'
 }
 
-
 buildscript {
     repositories {
         google()
         mavenCentral()
         maven {
             url "https://plugins.gradle.org/m2/"
+        }
+        maven{
+            url "https://maven.mozilla.org/maven2/"
         }
     }
     dependencies {
@@ -69,14 +71,22 @@ android {
 repositories {
     google()
     mavenCentral()
+    maven{
+        url "https://maven.mozilla.org/maven2/"
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
+    implementation"androidx.appcompat:appcompat:$androidxAppCompatVersion"
     implementation "androidx.core:core:$androidxCoreVersion"
     implementation "androidx.activity:activity:$androidxActivityVersion"
     implementation "androidx.fragment:fragment:$androidxFragmentVersion"
+//    implementation "androidx.appcompat:appcompat:1.6.1"
+//    implementation "androidx.core:core:1.9.0"
+//    implementation "androidx.activity:activity:1.6.1"
+//    implementation "androidx.fragment:fragment:1.5.5"
+
     implementation "androidx.coordinatorlayout:coordinatorlayout:$androidxCoordinatorLayoutVersion"
     implementation "androidx.webkit:webkit:$androidxWebkitVersion"
     testImplementation "junit:junit:$junitVersion"
@@ -85,5 +95,7 @@ dependencies {
     implementation "org.apache.cordova:framework:$cordovaAndroidVersion"
     testImplementation 'org.json:json:20140107'
     testImplementation 'org.mockito:mockito-inline:3.6.28'
+    api "org.mozilla.geckoview:geckoview-arm64-v8a:106.0.20221019185550"
+    implementation 'org.nanohttpd:nanohttpd-webserver:2.3.1'
 }
 
